Add Markdown download

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <p><a href="/versions/1.0.0">Read the latest version for yourself.</a></p>
 
+<p><a download="icepick-1.0.0.md" href="/versions/1.0.0.md">Download the latest version.</a></p>
+
 <p><a href="/versions">Review old versions.</a></p>
 
 <p><a href="https://github.com/kemitchell/icepick">Send feedback and patches via GitHub.</a></p>
