Process HTML with Tidy

--- a/index.html
+++ b/index.html
@@ -1,54 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="EN">
-  <head>
-    <meta charset="UTF-8">
-    <title>Homepage / Icepick</title>
-    <!-- Styles -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://readable.kemitchell.com/all.css">
-    <link rel="stylesheet" href="/styles.css">
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Homepage">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
-    <!-- OpenGraph -->
-    <meta name="og:type" content="website">
-    <meta name="og:title" content="Homepage">
-    <meta name="og:description" content="">
-    <meta name="og:image" content="">
-    <meta name="og:site" content="Icepick">
-  </head>
-  <body>
-    <header>
-      <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
-      <h1>Icepick</h1>
-      <p class="description">a weapon of mass user protection</p>
-    </header>
-
-<main><p>Icepick is a public <code class="language-plaintext highlighter-rouge">LICENSE</code> for software that requires transparency, accountability, and independence from those who run and develop the software for others.</p>
-
-<p><a href="/versions/1.0.0">Read the latest version for yourself.</a></p>
-
-<p><a download="icepick-1.0.0.md" href="/versions/1.0.0.md">Download the latest version.</a></p>
-
-<p><a href="https://github.com/kemitchell/icepick">Send feedback and patches via GitHub.</a></p>
-
-<h2 id="projects">Projects</h2>
-
-<ul class="projects">
-
-<li>
-    <a href="/projects/kink.garden.html">kink.garden</a>, (NSFW) kink list creator, in Python
-  </li>
-  
-</ul>
-
-<p>To list your project, send a pull request <a href="https://github.com/kemitchell/icepicklicense.org">via GitHub</a>.</p>
-</main>
-    <footer>
-      <p>&copy; <a href=https://kemitchell.com>K.E. Mitchell</a></p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Homepage / Icepick</title><!-- Styles -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://readable.kemitchell.com/all.css">
+  <link rel="stylesheet" href="/styles.css"><!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Homepage">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content=""><!-- OpenGraph -->
+  <meta name="og:type" content="website">
+  <meta name="og:title" content="Homepage">
+  <meta name="og:description" content="">
+  <meta name="og:image" content="">
+  <meta name="og:site" content="Icepick">
+</head>
+<body>
+  <header>
+    <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
+    <h1>Icepick</h1>
+    <p class="description">a weapon of mass user protection</p>
+  </header>
+  <main>
+    <p>Icepick is a public <code class="language-plaintext highlighter-rouge">LICENSE</code> for software that requires transparency, accountability, and independence from those who run and develop the software for others.</p>
+    <p><a href="/versions/1.0.0">Read the latest version for yourself.</a></p>
+    <p><a download="icepick-1.0.0.md" href="/versions/1.0.0.md">Download the latest version.</a></p>
+    <p><a href="https://github.com/kemitchell/icepick">Send feedback and patches via GitHub.</a></p>
+    <h2 id="projects">Projects</h2>
+    <ul class="projects">
+      <li>
+        <a href="/projects/kink.garden.html">kink.garden</a>, (NSFW) kink list creator, in Python
+      </li>
+    </ul>
+    <p>To list your project, send a pull request <a href="https://github.com/kemitchell/icepicklicense.org">via GitHub</a>.</p>
+  </main>
+  <footer>
+    <p>© <a href="https://kemitchell.com">K.E. Mitchell</a></p>
+  </footer>
+</body>
 </html>
-
