--- a/versions/1.0.0.html
+++ b/versions/1.0.0.html
@@ -1,156 +1,117 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="EN">
-  <head>
-    <meta charset="UTF-8">
-    <title>Icepick 1.0.0 / Icepick</title>
-    <!-- Styles -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://readable.kemitchell.com/all.css">
-    <link rel="stylesheet" href="/styles.css">
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Icepick 1.0.0">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
-    <!-- OpenGraph -->
-    <meta name="og:type" content="website">
-    <meta name="og:title" content="Icepick 1.0.0">
-    <meta name="og:description" content="">
-    <meta name="og:image" content="">
-    <meta name="og:site" content="Icepick">
-  </head>
-  <body>
-    <header>
-      <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
-      <h1>Icepick</h1>
-      <p class="description">a weapon of mass user protection</p>
-    </header>
-
-<main>
-  <a download="icepick-1.0.0" href="/versions/1.0.0.md">Download Markdown File</a>
-
-  <h1 id="icepick-100">Icepick 1.0.0</h1>
-
-<h2 id="purpose">Purpose</h2>
-
-<p>This is a weapon of mass user protection.</p>
-
-<p>Software creators use these terms to leverage the power vested in them by intellectual property law to demand transparency, accountability, and independence for those who rely on their work.</p>
-
-<p>Through these terms, software creators surrender the greater part of their power.  They make their software free for everyone to run, study, change, build on, share, and rely upon.  They retain their power, and wield it through these terms, only to stop users misusing their software to deny others transparency, accountability, or independence.  They invite and empower you to defend those rights for yourself, and for others.</p>
-
-<h2 id="agreement">Agreement</h2>
-
-<p>In order to receive any license under these terms, you must agree to their rules.  Those rules are both obligations under an agreement among users of this software and conditions to all your licenses under these terms.  You must not do anything with this software that triggers a rule you cannot or will not follow.</p>
-
-<h2 id="rights">Rights</h2>
-
-<p>These terms ensure each user’s rights to the same control they would enjoy running this software for themself when they instead rely on others to run it for them.  In using this software, you must respect those rights for others, as they must respect those rights for you:</p>
-
-<ul>
-  <li>
-    <p><em>Autonomy</em>:  Each user must have the same ability to run, study, change, build on, and share this software.</p>
-  </li>
-  <li>
-    <p><em>Transparency</em>:  Each user must be able to tell if another is running this software for them as they would run it for themself.</p>
-  </li>
-  <li>
-    <p><em>Accountability</em>:  If any user misleads another, they must face consequences.</p>
-  </li>
-  <li>
-    <p><em>Independence</em>:  Each user must be able to switch to running this software for themself, or to having someone different run it for them, without significant interruption, quality of service loss, legal risk, or discrimination.</p>
-  </li>
-</ul>
-
-<h2 id="duties">Duties</h2>
-
-<p>Applied together, user rights require:</p>
-
-<ul>
-  <li>
-    <p><em>Disclosure</em>:  On request, each user must be given the disclosure they need to exercise autonomy and independence.</p>
-  </li>
-  <li>
-    <p><em>Permission</em>:  On request, each user must be given the permission they need to exercise autonomy and independence.  For software, that means permission under these terms.</p>
-  </li>
-  <li>
-    <p><em>Completeness</em>:  The disclosure and permission users receive must be sufficient to exercise every aspect of autonomy and independence.</p>
-  </li>
-  <li>
-    <p><em>Practicality</em>:  Users must receive disclosure and permission in the most practical forms for exercising autonomy and independence, and in a form this software can process, if possible.</p>
-  </li>
-  <li>
-    <p><em>Responsiveness</em>:  Users must be given disclosure and permission promptly, through self-service functionality of this software when available.</p>
-  </li>
-  <li>
-    <p><em>Nondiscrimination</em>:  When exercising autonomy or independence entails a transaction with another, such as an equipment purchase or service contract, that transaction must be broadly available on nondiscriminatory price and other terms.</p>
-  </li>
-  <li>
-    <p><em>Noninterference</em>:  Users must be allowed to exercise autonomy and independence without technical, practical, legal, or other interference.</p>
-  </li>
-</ul>
-
-<h2 id="elements">Elements</h2>
-
-<p>User rights apply to every element of computing:</p>
-
-<ul>
-  <li>
-    <p><em>Software</em>:  all source code, tools, configuration, and other material used to run the software for the user</p>
-  </li>
-  <li>
-    <p><em>Data</em>:  all data the user provides to the software, data the software collects about the user, and additional data the software uses to derive additional data or functionality from those data</p>
-  </li>
-  <li>
-    <p><em>Processing</em>:  all computer hardware, physical or virtual, used to run the software for the user</p>
-  </li>
-  <li>
-    <p><em>Connectivity</em>:  all hardware, physical or virtual, and rights necessary to connect software and data to communications networks</p>
-  </li>
-  <li>
-    <p><em>Jurisdiction</em>:  the legal systems and permissions governing the other elements of computing</p>
-  </li>
-</ul>
-
-<h2 id="backstop">Backstop</h2>
-
-<p>Whenever these terms prove unclear, read them in favor of users.</p>
-
-<h2 id="enforcement">Enforcement</h2>
-
-<p>Any contributor to this software, anyone with a license under these terms, and any user of this software or software services provided with it can enforce any rule of these terms by seeking judicial orders to stop breach, orders to comply, money compensation, or any combination of these.</p>
-
-<h2 id="legality">Legality</h2>
-
-<p>The law qualifies every rule of these terms.  If following a rule absolutely would break the law, these terms only require you to follow the rule to the extent you can legally.  If any court or other adjudicator of these terms decides that any rule is completely unenforceable, but enforcing the rest would not defeat the purpose of these terms, the rest of these terms will still apply.</p>
-
-<h2 id="copyright">Copyright</h2>
-
-<p>Each contributor licenses you to do everything with this software that would otherwise infringe that contributor’s copyright in it, so long as you respect <a href="#rights">the rights of others under these terms</a>.</p>
-
-<h2 id="notices">Notices</h2>
-
-<p>You must ensure that everyone who gets a copy of any part of this software from you, with or without changes, also gets the text of these terms or a link to <a href="https://icepicklicense.com/versions/1.0.0">https://icepicklicense.com/versions/1.0.0</a>.</p>
-
-<h2 id="excuse">Excuse</h2>
-
-<p>If anyone notifies you in writing that you have broken any rule of these terms, you can remain a part of the agreement, and keep your licenses under it, by taking all practical steps to comply within thirty days after the notice.  If you do not do so, your participation in the agreement, and all your licenses under these terms, end immediately.</p>
-
-<h2 id="patent">Patent</h2>
-
-<p>Each contributor licenses you to do everything with this software that would otherwise infringe any patent claims they can license or become able to license, so long as you respect <a href="#rights">the rights of others under these terms</a>.</p>
-
-<h2 id="reliability">Reliability</h2>
-
-<p>No contributor can revoke any license under these terms.</p>
-
-<h2 id="no-liability">No Liability</h2>
-
-<p><strong><em>As far as the law allows, this software comes as is, without any warranty or condition, and no contributor will be liable to anyone for any damages related to this software or these terms under any kind of legal claim, except claims for breaking the rules of these terms.</em></strong></p>
-</main>
-    <footer>
-      <p>&copy; <a href=https://kemitchell.com>K.E. Mitchell</a></p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Icepick 1.0.0 / Icepick</title><!-- Styles -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://readable.kemitchell.com/all.css">
+  <link rel="stylesheet" href="/styles.css"><!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Icepick 1.0.0">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content=""><!-- OpenGraph -->
+  <meta name="og:type" content="website">
+  <meta name="og:title" content="Icepick 1.0.0">
+  <meta name="og:description" content="">
+  <meta name="og:image" content="">
+  <meta name="og:site" content="Icepick">
+</head>
+<body>
+  <header>
+    <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
+    <h1>Icepick</h1>
+    <p class="description">a weapon of mass user protection</p>
+  </header>
+  <main>
+    <a download="icepick-1.0.0" href="/versions/1.0.0.md">Download Markdown File</a>
+    <h1 id="icepick-100">Icepick 1.0.0</h1>
+    <h2 id="purpose">Purpose</h2>
+    <p>This is a weapon of mass user protection.</p>
+    <p>Software creators use these terms to leverage the power vested in them by intellectual property law to demand transparency, accountability, and independence for those who rely on their work.</p>
+    <p>Through these terms, software creators surrender the greater part of their power. They make their software free for everyone to run, study, change, build on, share, and rely upon. They retain their power, and wield it through these terms, only to stop users misusing their software to deny others transparency, accountability, or independence. They invite and empower you to defend those rights for yourself, and for others.</p>
+    <h2 id="agreement">Agreement</h2>
+    <p>In order to receive any license under these terms, you must agree to their rules. Those rules are both obligations under an agreement among users of this software and conditions to all your licenses under these terms. You must not do anything with this software that triggers a rule you cannot or will not follow.</p>
+    <h2 id="rights">Rights</h2>
+    <p>These terms ensure each user’s rights to the same control they would enjoy running this software for themself when they instead rely on others to run it for them. In using this software, you must respect those rights for others, as they must respect those rights for you:</p>
+    <ul>
+      <li>
+        <p><em>Autonomy</em>: Each user must have the same ability to run, study, change, build on, and share this software.</p>
+      </li>
+      <li>
+        <p><em>Transparency</em>: Each user must be able to tell if another is running this software for them as they would run it for themself.</p>
+      </li>
+      <li>
+        <p><em>Accountability</em>: If any user misleads another, they must face consequences.</p>
+      </li>
+      <li>
+        <p><em>Independence</em>: Each user must be able to switch to running this software for themself, or to having someone different run it for them, without significant interruption, quality of service loss, legal risk, or discrimination.</p>
+      </li>
+    </ul>
+    <h2 id="duties">Duties</h2>
+    <p>Applied together, user rights require:</p>
+    <ul>
+      <li>
+        <p><em>Disclosure</em>: On request, each user must be given the disclosure they need to exercise autonomy and independence.</p>
+      </li>
+      <li>
+        <p><em>Permission</em>: On request, each user must be given the permission they need to exercise autonomy and independence. For software, that means permission under these terms.</p>
+      </li>
+      <li>
+        <p><em>Completeness</em>: The disclosure and permission users receive must be sufficient to exercise every aspect of autonomy and independence.</p>
+      </li>
+      <li>
+        <p><em>Practicality</em>: Users must receive disclosure and permission in the most practical forms for exercising autonomy and independence, and in a form this software can process, if possible.</p>
+      </li>
+      <li>
+        <p><em>Responsiveness</em>: Users must be given disclosure and permission promptly, through self-service functionality of this software when available.</p>
+      </li>
+      <li>
+        <p><em>Nondiscrimination</em>: When exercising autonomy or independence entails a transaction with another, such as an equipment purchase or service contract, that transaction must be broadly available on nondiscriminatory price and other terms.</p>
+      </li>
+      <li>
+        <p><em>Noninterference</em>: Users must be allowed to exercise autonomy and independence without technical, practical, legal, or other interference.</p>
+      </li>
+    </ul>
+    <h2 id="elements">Elements</h2>
+    <p>User rights apply to every element of computing:</p>
+    <ul>
+      <li>
+        <p><em>Software</em>: all source code, tools, configuration, and other material used to run the software for the user</p>
+      </li>
+      <li>
+        <p><em>Data</em>: all data the user provides to the software, data the software collects about the user, and additional data the software uses to derive additional data or functionality from those data</p>
+      </li>
+      <li>
+        <p><em>Processing</em>: all computer hardware, physical or virtual, used to run the software for the user</p>
+      </li>
+      <li>
+        <p><em>Connectivity</em>: all hardware, physical or virtual, and rights necessary to connect software and data to communications networks</p>
+      </li>
+      <li>
+        <p><em>Jurisdiction</em>: the legal systems and permissions governing the other elements of computing</p>
+      </li>
+    </ul>
+    <h2 id="backstop">Backstop</h2>
+    <p>Whenever these terms prove unclear, read them in favor of users.</p>
+    <h2 id="enforcement">Enforcement</h2>
+    <p>Any contributor to this software, anyone with a license under these terms, and any user of this software or software services provided with it can enforce any rule of these terms by seeking judicial orders to stop breach, orders to comply, money compensation, or any combination of these.</p>
+    <h2 id="legality">Legality</h2>
+    <p>The law qualifies every rule of these terms. If following a rule absolutely would break the law, these terms only require you to follow the rule to the extent you can legally. If any court or other adjudicator of these terms decides that any rule is completely unenforceable, but enforcing the rest would not defeat the purpose of these terms, the rest of these terms will still apply.</p>
+    <h2 id="copyright">Copyright</h2>
+    <p>Each contributor licenses you to do everything with this software that would otherwise infringe that contributor’s copyright in it, so long as you respect <a href="#rights">the rights of others under these terms</a>.</p>
+    <h2 id="notices">Notices</h2>
+    <p>You must ensure that everyone who gets a copy of any part of this software from you, with or without changes, also gets the text of these terms or a link to <a href="https://icepicklicense.com/versions/1.0.0">https://icepicklicense.com/versions/1.0.0</a>.</p>
+    <h2 id="excuse">Excuse</h2>
+    <p>If anyone notifies you in writing that you have broken any rule of these terms, you can remain a part of the agreement, and keep your licenses under it, by taking all practical steps to comply within thirty days after the notice. If you do not do so, your participation in the agreement, and all your licenses under these terms, end immediately.</p>
+    <h2 id="patent">Patent</h2>
+    <p>Each contributor licenses you to do everything with this software that would otherwise infringe any patent claims they can license or become able to license, so long as you respect <a href="#rights">the rights of others under these terms</a>.</p>
+    <h2 id="reliability">Reliability</h2>
+    <p>No contributor can revoke any license under these terms.</p>
+    <h2 id="no-liability">No Liability</h2>
+    <p><strong><em>As far as the law allows, this software comes as is, without any warranty or condition, and no contributor will be liable to anyone for any damages related to this software or these terms under any kind of legal claim, except claims for breaking the rules of these terms.</em></strong></p>
+  </main>
+  <footer>
+    <p>© <a href="https://kemitchell.com">K.E. Mitchell</a></p>
+  </footer>
+</body>
 </html>
-
