--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="EN">
 <head>
   <meta charset="UTF-8">
-  <title>Homepage / Icepick</title><!-- Styles -->
+  <title>Homepage / Icepick</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://readable.kemitchell.com/all.css">
-  <link rel="stylesheet" href="/styles.css"><!-- Twitter Card -->
+  <link rel="stylesheet" href="/styles.css">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Homepage">
   <meta name="twitter:description" content="">
-  <meta name="twitter:image" content=""><!-- OpenGraph -->
+  <meta name="twitter:image" content="">
   <meta name="og:type" content="website">
   <meta name="og:title" content="Homepage">
   <meta name="og:description" content="">
