Build and serve PNG logo

--- a/projects/kink.garden.html
+++ b/projects/kink.garden.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="EN">
 <head>
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
+    <a href="/"><img id="logo" alt="icepick" src="/icepick.png"></a>
     <h1>Icepick</h1>
     <p class="description">a weapon of mass user protection</p>
   </header>
