--- a/versions/1.0.0.html
+++ b/versions/1.0.0.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
+    <a href="/"><img id="logo" alt="icepick" src="/icepick.png"></a>
     <h1>Icepick</h1>
     <p class="description">a weapon of mass user protection</p>
   </header>
