Fix social metadata

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   <link rel="stylesheet" href="https://readable.kemitchell.com/all.css">
   <link rel="stylesheet" href="/styles.css">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Homepage">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
+  <meta name="twitter:title" content="Icepick License">
+  <meta name="twitter:description" content="a weapon of mass user protection">
   <meta name="og:type" content="website">
-  <meta name="og:title" content="Homepage">
-  <meta name="og:description" content="">
-  <meta name="og:image" content="">
+  <meta name="og:title" content="Icepick License">
+  <meta name="og:description" content="a weapon of mass user protection">
   <meta name="og:site" content="Icepick">
 </head>
 <body>
