--- a/projects/kink.garden.html
+++ b/projects/kink.garden.html
@@ -8,12 +8,10 @@
   <link rel="stylesheet" href="/styles.css">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="kink.garden">
-  <meta name="twitter:description" content="(NSFW) kink list creator">
-  <meta name="twitter:image" content="">
+  <meta name="twitter:description" content="an Icepick-licensed project">
   <meta name="og:type" content="website">
   <meta name="og:title" content="kink.garden">
-  <meta name="og:description" content="(NSFW) kink list creator">
-  <meta name="og:image" content="">
+  <meta name="og:description" content="an Icepick-licensed project">
   <meta name="og:site" content="Icepick">
 </head>
 <body>
