--- a/versions/1.0.0.html
+++ b/versions/1.0.0.html
@@ -8,12 +8,10 @@
   <link rel="stylesheet" href="/styles.css">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Icepick 1.0.0">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
+  <meta name="twitter:description" content="a weapon of mass user protection">
   <meta name="og:type" content="website">
   <meta name="og:title" content="Icepick 1.0.0">
-  <meta name="og:description" content="">
-  <meta name="og:image" content="">
+  <meta name="og:description" content="a weapon of mass user protection">
   <meta name="og:site" content="Icepick">
 </head>
 <body>
